add friend controller

--- a/apps/client/src/app/main.css
+++ b/apps/client/src/app/main.css
@@ -19,3 +19,9 @@ body, html {
 *, ::after, ::before {
   box-sizing: border-box;
 }
+
+a:-webkit-any-link {
+  color: inherit;
+  cursor: pointer;
+  text-decoration: none;
+}
